# SparseEdit

./: README.md  _init_.py  app.py  cli_edit.py  conftest.py  download_weights.py  pyproject.toml  requirements.txt  run_edit.py  run_project.py  run_real_edit.py  ui_backend.py  ui_backend.py.bak  vae_roundtrip.py  verify_setup.py
sparse_edit.egg-info/: PKG-INFO  SOURCES.txt
sparse_edit/cli/: evaluate.py
sparse_edit/editing/: __init__.py  attention_mask.py  hook_manager.py  latent_surgery.py  pipeline.py  sparse_optimizer.py  sparsity_scheduler.py
sparse_edit/metrics/: clip_score.py  evaluation.py  leakage.py  lpips.py  psnr.py  ssim.py
sparse_edit/models/: __init__.py  attention.py  resblock.py  text_encoder.py  timestep_embedding.py  unet.py  vae.py
sparse_edit/schedulers/: __init__.py  ddim.py  ddim_inversion.py  rectified_flow.py
sparse_edit/utils/: __init__.py  image_utils.py  weight_loader.py
tests/: test_clip_score.py  test_end_to_end.py  test_evaluation.py  test_leakage.py  test_lpips.py  test_psnr.py  test_ssim.py  test_ui_backend.py
