[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-edit"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "Pillow>=10.0",
]

[tool.setuptools.packages.find]
include = ["sparse_edit*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: marks tests as slow (deselect with '-k \"not slow\"')",
]
